<resources>
    <string name="app_name">JgPushTest</string>

    <string name="action_search">搜索</string>
    <string name="action_plus">功能</string>
    <string name="action_album">我的相册</string>
    <string name="action_collection">我的收藏</string>
    <string name="action_card">我的银行卡</string>
    <string name="action_settings">设置</string>
    <string name="action_feed">意见反馈</string>
    <string name="plus_group_chat">发起群聊</string>
    <string name="plus_add_friend">添加朋友</string>
    <string name="plus_video_chat">视频聊天</string>
    <string name="plus_scan">扫一扫</string>
    <string name="plus_take_photo">拍照分享</string>
    <string name="dl_tv">电子防盗锁管理系统</string>
    <string name="Android">Android</string>
    <string name="dl_srzh">请输入账号</string>
    <string name="dl_srpw">请输入密码</string>
    <string name="dl">登      录</string>
    <string name="dl_jzpw">记住密码</string>
    <string name="dl_dq">当前版本:</string>
    <string name="dl_jzzh">记住帐号</string>
</resources>
