<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/acvvvv"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100px"
        android:gravity="center">

        <ImageView
            android:id="@+id/sylh"
            android:layout_width="145px"
            android:layout_height="145px"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/mian_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60px"
            android:gravity="center"
            android:text="@string/dl_tv"
            android:textColor="@color/tv_white"
            android:textSize="36px" />

        <TextView
            android:id="@+id/shouyebiaoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="110px"
            android:layout_marginTop="18px"
            android:background="@drawable/ruanjiao"
            android:gravity="center"
            android:text="@string/Android"
            android:textColor="@color/tv_white"
            android:textSize="20px" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:layout_marginLeft="38px"
        android:layout_marginRight="38px"
        android:layout_marginTop="220px"
        android:background="@drawable/text_box"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20px"
            android:src="@drawable/uer1_icon" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"

            android:background="@null"
            android:hint="@string/dl_srzh"
            android:textColor="@color/wbk_no"
            android:textColorHint="@color/bg_gray"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="36px" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90px"
        android:layout_marginLeft="38px"
        android:layout_marginRight="38px"
        android:layout_marginTop="50px"
        android:background="@drawable/text_box"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:src="@drawable/pw1_icon" />


        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36px"
            android:background="@null"
            android:hint="@string/dl_srpw"
            android:textColor="@color/wbk_no"
            android:textColorHint="@color/bg_gray"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="36px" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40px"
        android:gravity="center_vertical">

        <CheckBox
            android:id="@+id/jzmm"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="65px"
            android:text="@string/dl_jzpw"
            android:textColor="@color/bg_gray" />
    </RelativeLayout>

    <Button
        android:id="@+id/login1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38px"
        android:layout_marginRight="38px"
        android:layout_marginTop="50px"
        android:background="@drawable/linearlayout_main"
        android:text="@string/dl"
        android:textColor="@color/tv_white"
        android:textSize="36px" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30px"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60px"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dl_dq"
                android:textColor="@color/tv_black"
                android:textSize="18px" />

            <TextView
                android:id="@+id/banbenhao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:text=""
                android:textColor="@color/tv_black"
                android:textSize="18px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30px"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20px"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColor="@color/tv_black"
                android:textSize="18px" />

            <TextView
                android:id="@+id/scjsbh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:text=""
                android:textColor="@color/tv_black"
                android:textSize="18px" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>