<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/acvvvv">
    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.26999998"
        android:id="@+id/linearLayout4">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20px"
            android:src="@drawable/uer1_icon" />

        <EditText
            android:inputType="text"
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30px"
            android:singleLine="true"
            android:textScaleX="1.5"
            android:background="@null"
            android:hint="@string/dl_srzh"
            android:textColor="@color/bg_gray"
            android:textColorHint="@color/wbk_no"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.0"
        android:id="@+id/linearLayout3"
        android:layout_marginTop="24dp">
        <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="20px"
        android:src="@drawable/pw1_icon" />
        <EditText
            android:inputType="textPassword"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30px"
            android:singleLine="true"
            android:textScaleX="1.5"
            android:background="@null"
            android:hint="@string/dl_srpw"
            android:textColor="@color/bg_gray"
            android:textColorHint="@color/wbk_no"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="22sp" />
    </LinearLayout>


    <Button
        android:id="@+id/suo_login1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:text="@string/dl"
        android:background="@color/gry"
        android:textColor="@color/tv_white"
        android:textSize="36px"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="82dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/linearLayout3"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />
    <View
        android:background="@color/bg_gray"
        android:layout_width="266dp"
        android:layout_height="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        android:id="@+id/view2" />

    <View
        android:id="@+id/view"
        android:layout_width="266dp"
        android:layout_height="2dp"
        android:background="@color/bg_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/linearLayout3"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0"
        android:id="@+id/linearLayout">
        <CheckBox
            android:id="@+id/jzmm"

            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/xuanzhekuang"
            android:button="@null"/>
        <TextView
            android:textColor="@color/bg_gray"
            android:textSize="12sp"
            android:gravity="center_vertical"
            android:text="@string/dl_jzzh"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
